INCLUDES = @SDL_CFLAGS@ -Wall -g -DPACKAGE_DATA_DIR="\"$(datadir)/$(PACKAGE)\""

bin_PROGRAMS = luola

luola_LDADD = @SDL_LIBS@

luola_SOURCES = \
	defines.h \
	number.h \
	console.c \
	console.h \
	list.c \
	list.h \
	parser.c \
	parser.h \
	fs.c \
	fs.h \
	SFont.c \
	SFont.h \
	level.c \
	level.h \
	player.c \
	player.h \
	ship.c \
	ship.h \
	physics.c \
	physics.h \
	animation.c \
	animation.h \
	particle.c \
	particle.h \
	projectile.c \
	projectile.h \
	bullet.c \
	bullet.h \
	weapon.c \
	weapon.h \
	intro.c \
	intro.h \
	game.c \
	game.h \
	levelfile.c \
	levelfile.h \
	special.c \
	special.h \
	walker.c \
	walker.h \
	flyer.c \
	flyer.h \
	critter.c \
	critter.h \
	pilot.c \
	pilot.h \
	spring.c \
	spring.h \
	decor.c \
	decor.h \
	audio.c \
	audio.h \
	font.c \
	font.h \
	menu.c \
	menu.h \
	hotseat.c \
	hotseat.h \
	selection.c \
	selection.h \
	startup.c \
	startup.h \
	demo.c \
	demo.h \
	ldat.c \
	ldat.h \
	lconf.c \
	lconf.h \
	lcmap.h \
	lcmap.c \
	main.c
